<resources>
    <string name="app_name">Flatmates</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="pass">Password</string>
    <string name="new_account">No account yet? Register!</string>
    <string name="passLogFlat">   Flat password</string>
    <string name="login_Flat">No flat yet? Register!</string>
    <string name="login_to_flat"> LOGIN TO FLAT</string>
    <string name="flat_name"> Flat name</string>
    <string name="name"> Name</string>
    <string name="create_flat"> CREATE FLAT</string>
    <string name="logg_flat"> Already have flat? Login!</string>
    <string name="conf_pass">Confirm password</string>
    <string name="conf_new_pass">Confirm new password</string>
    <string name="logg">Already a member? Login!</string>
    <string name="create">Create</string>
    <string name="change_pass">Change Password (press old Password)</string>
    <string name="login">Login</string>
    <string name="my_list">My List</string>
    <string name="logout">Logout</string>
    <string name="acc">Account</string>
    <string name="flat_set">Flat Settings</string>
    <string name="ed_flat">Edit Flat</string>
    <string name="vw_flat">View Flats</string>
    <string name="del_flat">Delete Flat</string>
    <string name="info">Information</string>
    <string name="opt">Options</string>
    <string name="flat">Flat</string>
    <string name="pol">Polish</string>
    <string name="select">Select</string>
    <string name="change">Change</string>
    <string name="eng">English</string>
    <string name="back">Back</string>
    <string name="new_pass">Press New Password</string>
    <string name="change_lang">Change Language</string>
    <string name="acc_set">Account Settings</string>
    <string name="main_list">Main List</string>
    <string name="my_archive">My Archive</string>
    <string name="error">Error, Passwords are not the same</string>
    <string name="success">Success</string>
    <string name="add_flat">Add Flat</string>
    <string name="add">Add</string>
    <string name="add_item">Add item</string>
    <string name="all">All</string>
    <string name="reserved">Reserved</string>
    <string name="active">Active</string>
    <string name="view_user">View Users</string>
    <string name="sgn_flat">Sign to Flat</string>
    <string name="add_to_list">Added to my list</string>
    <string name="error2">ERROR, Please check your internet connection</string>
    <string name="save">Save</string>
    <string name="buy">Buy now</string>
    <string name="add_list">Add to my list</string>
    <string name="bought">You bought: </string>
    <string name="error3">ERROR, Bad type of input</string>
    <string name="error4">ERROR, Please try again</string>
    <string name="amount">Amount: </string>
    <string name="sgn_out">Sign out of flat</string>
    <string name="error5">Logout failed...</string>
    <string name="error6">Your list is empty</string>
    <string name="change2">Pass was changed</string>
    <string name="delete">Delete</string>
    <string name="deleted">Deleted</string>
    <string name="cant_delete">You cannot delete this product</string>
    <string name="alrd">Already reserved</string>
    <string name="unreserved">Unreserved</string>
    <string name="undo">Revoked purchase</string>
    <string name="add_list2">Add to main list</string>
    <string name="author">Author:</string>
    <string name="name2">Name:</string>
    <string name="date">Date:</string>
    <string name="buyer">Buyer:</string>
    <string name="main_archive">Main Archive</string>
    <string name="all_users">All Users</string>
    <string name="error7">You cannot undo this product</string>


    <string-array name="language">
        <item>@string/select</item>
        <item>@string/pol</item>
        <item>@string/eng</item>
    </string-array>
    <string name="options">Options</string>
</resources>
