<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".flat.AddFlat">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/sgn_flat"
        android:id="@+id/textView20"
        android:layout_marginBottom="20dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <EditText
        android:hint="@string/flat_name"
        android:layout_width="100dp"
        android:layout_height="30dp"
        android:background="@drawable/edit_text_style"
        android:id="@+id/editText22"
        android:layout_below="@+id/textView20"
        android:layout_marginBottom="20dp"
        android:layout_centerHorizontal="true" />

    <EditText
        android:hint="@string/pass"
        android:background="@drawable/edit_text_style"
        android:inputType="textPassword"
        android:layout_width="100dp"
        android:layout_height="30dp"
        android:id="@+id/editText9"
        android:layout_below="@+id/editText22"
        android:layout_marginBottom="20dp"
        android:layout_alignLeft="@+id/editText22"
        android:layout_alignStart="@+id/editText22" />

    <Button
        android:layout_width="100dp"
        android:layout_height="30dp"
        android:text="@string/login"
        android:onClick="loginToFlat"
        android:id="@+id/button7"
        android:textColor="#238AE1"
        android:textSize="20sp"
        android:background="@drawable/buttonshape"
        android:layout_below="@+id/editText9"
        android:layout_alignLeft="@+id/editText9"
        android:layout_alignStart="@+id/editText9" />

</RelativeLayout>
