<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/flat_set"
        android:textColor="#238ae1"
        android:id="@+id/textView3"
        android:fontFamily="sans-serif-medium"
        android:textSize="28dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="10dp"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="5dp" />
    <View
        android:layout_width="match_parent"
        android:layout_height="4dp"
        android:background="#238ae1"
        android:layout_below="@+id/textView3"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#c0d1df"
        android:layout_below="@+id/textView3"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#c0d1df"
        android:layout_below="@+id/textView3"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-medium"
        android:text="@string/sgn_flat"
        android:id="@+id/textView14"
        android:textSize="18dp"
        android:clickable="true"
        android:onClick="signToFlat"
        android:textColor="#0b0a0a"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#c0d1df"
        android:layout_below="@+id/textView3"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-medium"
        android:text="@string/sgn_out"
        android:id="@+id/textView6"
        android:textSize="18dp"
        android:clickable="true"
        android:onClick="sgnOut"
        android:textColor="#0b0a0a"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#c0d1df"
        android:layout_below="@+id/textView3"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-medium"
        android:text="@string/vw_flat"
        android:id="@+id/textView7"
        android:textSize="18dp"
        android:textColor="#0b0a0a"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:clickable="true"
        android:onClick="flatUsers"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#c0d1df"
        android:layout_below="@+id/textView3"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-medium"
        android:text="@string/view_user"
        android:id="@+id/textView5"
        android:textSize="18dp"
        android:textColor="#0b0a0a"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:clickable="true"
        android:onClick="viewFlat" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#c0d1df"
        android:layout_below="@+id/textView3"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-medium"
        android:text="@string/add_flat"
        android:id="@+id/textView13"
        android:textSize="18dp"
        android:clickable="true"
        android:onClick="addFlat"
        android:textColor="#0b0a0a"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#c0d1df"
        android:layout_below="@+id/textView3"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-medium"
        android:text="@string/ed_flat"
        android:clickable="true"
        android:onClick="onHelp"
        android:id="@+id/textView10"
        android:textSize="18dp"
        android:textColor="#0b0a0a"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#c0d1df"
        android:layout_below="@+id/textView3"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-medium"
        android:text="@string/back"
        android:id="@+id/textView9"
        android:textSize="18dp"
        android:textColor="#0b0a0a"
        android:clickable="true"
        android:onClick="back"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp" />

</LinearLayout>