<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".flat.EditFlat">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/acc_set"
        android:id="@+id/textView21"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/change_pass"
        android:id="@+id/textView23"
        android:textSize="15dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="32dp"
        android:layout_below="@+id/textView21" />

    <EditText
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:background="@drawable/edit_text_style"
        android:ems="10"
        android:id="@+id/editText11"

        android:layout_alignBaseline="@+id/textView25"
        android:layout_alignBottom="@+id/textView25"
        android:layout_toEndOf="@+id/textView23"
        android:layout_alignLeft="@+id/editText12"
        android:layout_alignStart="@+id/editText12" />

    <EditText
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/editText12"
        android:background="@drawable/edit_text_style"

        android:layout_alignTop="@+id/textView23"
        android:layout_toRightOf="@+id/textView21"
        android:layout_toEndOf="@+id/textView21" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="15dp"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/new_pass"
        android:id="@+id/textView25"
        android:layout_below="@+id/textView23"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="33dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="15dp"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/change_lang"
        android:id="@+id/textView37"
        android:layout_marginTop="40dp"
        android:layout_below="@+id/editText11"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/spinner"
        android:layout_alignBaseline="@+id/textView37"
        android:layout_alignBottom="@+id/textView37"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_toRightOf="@+id/textView23"
        android:layout_toEndOf="@+id/textView23" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-medium"
        android:text="@string/back"
        android:onClick="back"
        android:clickable="true"
        android:id="@+id/button10"
        android:textColor="#238AE1"
        android:textSize="20sp"
        android:background="@drawable/buttonshape"
        android:layout_marginTop="32dp"
        android:layout_below="@+id/button11"
        android:layout_alignLeft="@+id/button11"
        android:layout_alignStart="@+id/button11"
        android:layout_alignRight="@+id/button11"
        android:layout_alignEnd="@+id/button11" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-medium"
        android:text="@string/change"
        android:onClick="changePass"
        android:clickable="true"
        android:id="@+id/button11"
        android:textColor="#238AE1"
        android:textSize="20sp"
        android:background="@drawable/buttonshape"
        android:layout_marginTop="32dp"
        android:layout_below="@+id/spinner"
        android:layout_alignLeft="@+id/textView21"
        android:layout_alignStart="@+id/textView21"
        android:layout_toLeftOf="@+id/editText11"
        android:layout_toStartOf="@+id/editText11" />

</RelativeLayout>
